bk_ida/gccida/c1/reloads_conflict
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reloads_conflict/src/reload1.c:5202:15: error: use of undeclared identifier 'off_6CC868'
fancy_abort( &off_6CC868[4], 4739, "reloads_conflict"); 
              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reloads_conflict/src/obj/reload1.o] Error 1
